<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Todo</string>
    <string name="add_task">Add Task</string>
    <string name="add_sub_task">Add sub task</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="category">Category</string>
    <string name="create_new_category">Create new category</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="important_task">Important Task</string>
    <string name="copy_task">Copy Task</string>
    <string name="add_date_time">Add date/time</string>
    <string name="create_task">Create Task</string>
    <string name="hello_good_morning">Hello, Good Morning</string>
    <string name="hello_good_afternoon">Hello, Good Afternoon</string>
    <string name="hello_good_evening">Hello, Good Evening</string>
    <string name="search_task">Search task</string>
    <string name="title_activity_sub_task">SubTaskActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="long_press_and_drag_to_rearrange">Long press and drag to rearrange</string>
    <string name="overdue">Overdue</string>
    <string name="update_task">Update Task</string>
    <string name="no">No</string>
</resources>